--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -342,6 +342,7 @@ cue_builtToScaleDS_pew=pew
 
 cue_hoppingRoad_tink=tink
 cue_hoppingRoad_cymbal=cymbal
+cue_hoppingRoad_spySnort=spy snort
 
 cue_loveLizards_bzzt1=bzzt1
 cue_loveLizards_bzzt2=bzzt2
