--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -59,6 +59,7 @@ game.ninja=Ninja
 game.airBatter=Air Batter
 game.drBacteria=Dr. Bacteria
 game.frogHop=Frog Hop
+game.splashdown=Splashdown
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -403,3 +404,13 @@ cue_frogHop_spinitboys3=lead\nboys!
 cue_frogHop_spinitboys4=boys\nspin
 cue_frogHop_spinitboys5=boys\nit
 cue_frogHop_spinitboys6=boys\nboys!
+
+cue_splashDown_alleyoop=alley-oop!
+cue_splashDown_ascend=ascend
+cue_splashDown_descend=descend
+cue_splashDown_oooh=oooh
+cue_splashDown_spin1=spin1
+cue_splashDown_spin2=spin2
+cue_splashDown_start=start
+cue_splashDown_yeah1=yeah1
+cue_splashDown_yeah2=yeah2
