Added Stairway Catch

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -60,6 +60,7 @@ game.airBatter=Air Batter
 game.drBacteria=Dr. Bacteria
 game.frogHop=Frog Hop
 game.splashdown=Splashdown
+game.stairCatch=Stairway Catch
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -405,12 +406,16 @@ cue_frogHop_spinitboys4=boys\nspin
 cue_frogHop_spinitboys5=boys\nit
 cue_frogHop_spinitboys6=boys\nboys!
 
-cue_splashDown_alleyoop=alley-oop!
-cue_splashDown_ascend=ascend
-cue_splashDown_descend=descend
-cue_splashDown_oooh=oooh
-cue_splashDown_spin1=spin1
-cue_splashDown_spin2=spin2
-cue_splashDown_start=start
-cue_splashDown_yeah1=yeah1
-cue_splashDown_yeah2=yeah2
+cue_splashdown_alleyoop=alley-oop!
+cue_splashdown_ascend=ascend
+cue_splashdown_descend=descend
+cue_splashdown_oooh=oooh
+cue_splashdown_spin1=spin1
+cue_splashdown_spin2=spin2
+cue_splashdown_start=start
+cue_splashdown_yeah1=yeah1
+cue_splashdown_yeah2=yeah2
+
+cue_stairCatch_orange=orange
+cue_stairCatch_melon=melon
+cue_stairCatch_clap=clap
