--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -61,6 +61,7 @@ game.drBacteria=Dr. Bacteria
 game.frogHop=Frog Hop
 game.splashdown=Splashdown
 game.stairCatch=Stairway Catch
+game.bonOdori=Bon-Odori
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -419,3 +420,11 @@ cue_splashdown_yeah2=yeah2
 cue_stairCatch_orange=orange
 cue_stairCatch_melon=melon
 cue_stairCatch_clap=clap
+
+cue_bonOdori_dondo1=don1
+cue_bonOdori_dondo2=do1
+cue_bonOdori_dondon1=don2
+cue_bonOdori_dondon2=do2
+cue_bonOdori_pan=pan1
+cue_bonOdori_panpan1=pan2
+cue_bonOdori_panpan2=pan3
