--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -62,6 +62,8 @@ game.frogHop=Frog Hop
 game.splashdown=Splashdown
 game.stairCatch=Stairway Catch
 game.bonOdori=Bon-Odori
+game.loveLab=Love Lab
+game.doubleDate=Double Date
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -428,3 +430,11 @@ cue_bonOdori_dondon2=do2
 cue_bonOdori_pan=pan1
 cue_bonOdori_panpan1=pan2
 cue_bonOdori_panpan2=pan3
+
+cue_loveLab_clear=clear
+cue_loveLab_leftCatch=left catch
+cue_loveLab_leftThrow=left throw
+cue_loveLab_rightCatch=right catch
+cue_loveLab_rightThrow=right throw
+cue_loveLab_shake1=shake1
+cue_loveLab_shake2=shake2
