Added Double Date

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -438,3 +438,9 @@ cue_loveLab_rightCatch=right catch
 cue_loveLab_rightThrow=right throw
 cue_loveLab_shake1=shake1
 cue_loveLab_shake2=shake2
+
+cue_doubleDate_basketballBounce=b-ball
+cue_doubleDate_footballBounce=football\nbounce
+cue_doubleDate_footballKick=football\nkick
+cue_doubleDate_kick=kick
+cue_doubleDate_soccerBounce=soccer
