Added Screwbot Factory

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -64,6 +64,7 @@ game.stairCatch=Stairway Catch
 game.bonOdori=Bon-Odori
 game.loveLab=Love Lab
 game.doubleDate=Double Date
+game.screwbotFactory=Screwbot Factory
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -444,3 +445,8 @@ cue_doubleDate_footballBounce=football\nbounce
 cue_doubleDate_footballKick=football\nkick
 cue_doubleDate_kick=kick
 cue_doubleDate_soccerBounce=soccer
+
+cue_screwbotFactory_clankclank1=clank-
+cue_screwbotFactory_clankclank2=CLANK
+cue_screwbotFactory_letsgo=let's go
+cue_screwbotFactory_ohyeah=oh yeah
