--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -65,6 +65,7 @@ game.bonOdori=Bon-Odori
 game.loveLab=Love Lab
 game.doubleDate=Double Date
 game.screwbotFactory=Screwbot Factory
+game.cannery=Cannery
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -450,3 +451,6 @@ cue_screwbotFactory_clankclank1=clank-
 cue_screwbotFactory_clankclank2=CLANK
 cue_screwbotFactory_letsgo=let's go
 cue_screwbotFactory_ohyeah=oh yeah
+
+cue_cannery_ding=ding
+cue_cannery_steam=steam
