Added Built to Scale (Fever)

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -66,6 +66,7 @@ game.loveLab=Love Lab
 game.doubleDate=Double Date
 game.screwbotFactory=Screwbot Factory
 game.cannery=Cannery
+game.builtToScaleFever=Built to Scale (Fever)
 
 cue_countIn_and=and
 cue_countIn_cowbell=cowbell
@@ -454,3 +455,10 @@ cue_screwbotFactory_ohyeah=oh yeah
 
 cue_cannery_ding=ding
 cue_cannery_steam=steam
+
+cue_builtToScaleFever_1=1
+cue_builtToScaleFever_2=2
+cue_builtToScaleFever_3=3
+cue_builtToScaleFever_4=4
+cue_builtToScaleFever_prepare=prepare
+cue_builtToScaleFever_shoot=shoot
