--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -450,8 +450,17 @@ cue_doubleDate_soccerBounce=soccer
 
 cue_screwbotFactory_clankclank1=clank-
 cue_screwbotFactory_clankclank2=CLANK
-cue_screwbotFactory_letsgo=let's go
-cue_screwbotFactory_ohyeah=oh yeah
+cue_screwbotFactory_lets=let's
+cue_screwbotFactory_go=go!
+cue_screwbotFactory_oh=oh
+cue_screwbotFactory_yeah=yeah!
+cue_screwbotFactory_screwingLetsGo=screwing (let's go)
+cue_screwbotFactory_screwingOhYeah=screwing (oh yeah)
+cue_screwbotFactory_letsgoPlace=place (let's go)
+cue_screwbotFactory_letsgoStart=start (let's go)
+cue_screwbotFactory_ohyeahPlace=place (oh yeah)
+cue_screwbotFactory_ohyeahStart=start (oh yeah)
+cue_screwbotFactory_complete=complete
 
 cue_cannery_ding=ding
 cue_cannery_steam=steam
