Main menu animation

--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -1,5 +1,9 @@
 gamename=Rhythm Heaven Architect
 
+mainMenu.kevinMacleodAttribution="{0}" Kevin MacLeod (incompetech.com)\n\
+Licensed under Creative Commons: By Attribution 3.0\n\
+http://creativecommons.org/licenses/by/3.0/
+
 menu.exitWarning=Are you sure you want to exit?\nAll unsaved changes will be lost.
 menu.newWarning=Are you sure you want to start a new remix?\nAll unsaved changes will be lost.
 menu.openWarning=Are you sure you want to open an existing remix?\nAll unsaved changes will be lost.
