--- a/core/assets/localization/default.properties
+++ b/core/assets/localization/default.properties
@@ -51,16 +51,16 @@ game.gleeClub=Glee Club
 game.fillbots=Fillbots
 game.lockstep2=Lockstep 2
 game.builtToScaleDS=Built to Scale (DS)
-game.cosmoDance=Cosmo Dance
-game.hoppingRoad=Hopping Road
+game.cosmoDance=Cosmic Dance
+game.hoppingRoad=Bouncy Road
 game.loveLizards=Love Lizards
 game.exhibitionMatch=Exhibition Match
-game.ninja=Ninja
-game.airBatter=Air Batter
-game.drBacteria=Dr. Bacteria
+game.ninja=Ninja Bodyguard
+game.airBatter=Spaceball
+game.drBacteria=Sick Beats
 game.frogHop=Frog Hop
 game.splashdown=Splashdown
-game.stairCatch=Stairway Catch
+game.stairCatch=Catchy Tune
 game.bonOdori=Bon-Odori
 game.loveLab=Love Lab
 game.doubleDate=Double Date
